# vibeaway

./: .env.example  .gitignore  CLAUDE.md  LICENSE  OPERATIONS.md  README.md  pyproject.toml
docs/: CNAME  index.md  vibeaway-article-de.html  vibeaway-article-en.html  vibeaway-article-es.html  vibeaway-article-fr.html  vibeaway-article-it.html  vibeaway-article-ja.html  vibeaway-article-pt.html  vibeaway-article-zh.html
service/: bot_watchdog.pyw  deploy.py  install-service.ps1  install-service.sh  install.py  run_bot.bat  use-local-bot.ps1
src/vibeaway/: __main__.py  agents.py  bot.py  config.py  paths.py  session_backends.py  session_manager.py  transcriber.py  tts.py
src/vibeaway/locales/: __init__.py  de.json  en.json  es.json  fr.json  it.json  pt.json
tests/: test_agents.py  test_bot.py  test_intent_parser.py  test_media.py  test_session_backends.py  test_session_manager.py
